# clawnet

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
app/client/: client.c  client.h  main.c
app/server/: main.c  server.c  server.h
core/include/clawnet/: protocol.h  test.h
core/include/trawl/: protocol.h
core/src/: protocol.c  recv_buffer.c  test.c
docs/: custom_application-layer_protocol.md  lvl_0.md  lvl_template.md  project_ideas.md  repo-structure.md  section_ideas.md  section_template.md  starting_point.md  tcp_connections.md
docs/sections/: custom_application-layer_protocol.md  recv_buffer.md  tcp_connections.md
docs/sections/custom_application_layer_protocol/: custom_application-layer_protocol.md
docs/sections/http/: picohttpparser.md  readme.md
docs/sections/tcp/: berkeley_sockets.md  readme.md  tcp_connections.md
sections/receive_buffer/: CMakeLists.txt
sections/shared/: CMakeLists.txt
sections/shared/core/include/: recv_buffer.h
sections/shared/core/src/: recv_buffer.c
sections/tcp/berkeley_api/: CMakeLists.txt
sections/tcp/berkeley_api/app/client/: main.c
sections/tcp/berkeley_api/core/src/: berkeley_api.c
